<resources>
    <string name="app_name">Primero a su mesa</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="surname">Nombre</string>
    <string name="addCar">Agregado al carrito</string>
    <string name="PlOrder">Realizar pedido</string>
    <string name="total">Total: </string>
    <string name="menu">Este es nuestra lista de restaurantes y sus menús</string>
    <string name="sucessfully">inicio sesión con éxito</string>
    <string name="Supsucessfully">Usuario registrado con éxito</string>
    <string name="failed">Número de teléfono o contraseña incorrectos</string>
    <string name="Exist">El usuario ya existe en el sistema</string>
    <string name="waiting">Por favor espera</string>
    <string name="nExist">El usuario no existe en la base de datos</string>
    <string name="phone">Número de Teléfono</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="login">Inciar Sesión</string>
    <string name="sign_up">Registrate</string>
    <string name="forget">Olvidé mi contraseña</string>
    <string name="visa">Visa</string>
    <string name="mastercard">Mastercard</string>
    <string name="american">American Express</string>
    <string name="thanks">Gracias por ordenar</string>
    <string name="empty">El carrito esta vacio</string>
    <string name="cardn">Número de tarjeta</string>
    <string name="termns">He leído y estoy de acuerdo con los Términos y Condiciones y con las Políticas y Tratamientos de Datos Personales</string>
    <string name="error_invalid_email">Este correo es invalido</string>
    <string name="error_invalid_password">Esta contraseña es demasiado corta</string>
    <string name="error_incorrect_password">La contraseña es icorrecta</string>
    <string name="error_field_required">El campo es requerido</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="help_pass">Ayuda de contraseña</string>
    <string name="text_recovery">Introduzca la dirección de correo electrónico asociado</string>
    <string name="cont">Continuar</string>
    <string name="slogan">Table Food \n primero a su mesa</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
