<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/my_bg"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".SignUp">

    <LinearLayout android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_centerInParent="true"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:orientation="vertical">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:met_singleLineEllipsis="true"
            app:met_primaryColor="@color/white"
            app:met_maxCharacters="10"
            app:met_floatingLabel="highlight"
            app:met_baseColor="@color/white"
            android:inputType="phone"
            android:textSize="34sp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:hint="@string/phone"
            android:id="@+id/edtPhone"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:met_singleLineEllipsis="true"
            app:met_primaryColor="@color/white"
            app:met_floatingLabel="highlight"
            app:met_baseColor="@color/white"
            android:inputType="textEmailAddress"
            android:textSize="34sp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:hint="@string/email"
            android:id="@+id/edtEmail"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:met_singleLineEllipsis="true"
            app:met_primaryColor="@color/white"
            app:met_floatingLabel="highlight"
            app:met_baseColor="@color/white"
            android:inputType="textPassword"
            android:textSize="34sp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:hint="@string/password"
            android:id="@+id/edtPassword"/>

    </LinearLayout>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:background="@color/btnSignUp"
        android:textColor="@color/white"
        android:id="@+id/btnRegister"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:layout_alignParentBottom="true"
        android:text="@string/sign_up"/>

</RelativeLayout>