<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/my_bg"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".MainActivity">

    <LinearLayout android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView android:layout_height="200dp"
            android:layout_width="200dp"
            android:src="@drawable/food_logo"/>

        <TextView android:layout_height="wrap_content"
            android:layout_width="200dp"
            android:textColor="@color/white"
            android:text="@string/slogan"
            android:id="@+id/txtSlogan"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:textColor="@color/white"
            android:text="@string/sign_up"
            android:id="@+id/btnsignUp"
            android:background="@color/btnSignUp"
            android:layout_margin="8dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btnSignIn"
            android:text="@string/login"
            android:background="@color/btnSignActive"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            />

    </LinearLayout>

</RelativeLayout>